Update font variable in styles.css and improve HTML formatting for better readability

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
     --bg-color: rgb(129, 78, 112);
     --text-color: rgb(255, 255, 255);
     --accent-color: rgb(0, 0, 0);
-    --fuente-titulos: "skew-variable", sans-serif;
+    --fuente-titulos: "laca-variable", sans-serif;
     --fuente-texto: "tonos", sans-serif;
 }
 html{
